# fdf

./: .gitignore  Cargo.toml  README.md
.github/workflows/: check.yml  pr-build.yml  release.yml
src/: main.rs
src/fdf/: cli.rs  entry_gen.rs  filelist_entry_gen.rs  find.rs  hash.rs  interrupt.rs  mod.rs  options.rs  output.rs  parse_size.rs  walkdir_entry_gen.rs
