[package]
name = "fdf"
version = "0.3.0"
authors = ["Aarni Koskela <akx@iki.fi>"]
edition = "2021"

[dependencies]
clap = "2.33.3"
hex = "0.4.3"
humansize = "1.1.1"
indicatif = "0.16.2"
rayon = "1.5.1"
regex = "1.5.4"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
sha2 = "0.9.5"
string_cache = "0.8.1"
walkdir = "2.3.2"
murmur3 = "0.5.1"
