[package]
name = "fdf"
version = "0.4.0"
authors = ["Aarni Koskela <akx@iki.fi>"]
edition = "2021"

[dependencies]
anyhow = "1.0.70"
blake3 = "1.3.3"
clap = { version = "4.1.11", features = ["derive", "cargo"] }
ctrlc = "3.2.5"
hex = "0.4.3"
humansize = "2.1.3"
indicatif = "0.17.3"
lazy_static = "1.4.0"
rayon = "1.7.0"
regex = "1.7.1"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
sha2 = "0.10.6"
string_cache = "0.8.7"
twox-hash = "1.6.3"
walkdir = "2.3.3"
